--- a/utils/cgimp/application.properties
+++ b/utils/cgimp/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Tue Nov 15 11:13:44 GMT 2011
+#Tue Nov 15 12:19:22 GMT 2011
 app.grails.version=1.3.7
 app.name=cgimp
 app.servlet.version=2.4
 app.version=0.1
 plugins.hibernate=1.3.7
+plugins.shiro=1.1.3
 plugins.tomcat=1.3.7
