--- a/utils/cgimp/application.properties
+++ b/utils/cgimp/application.properties
@@ -1,9 +1,10 @@
 #Grails Metadata file
-#Tue Nov 15 12:19:22 GMT 2011
+#Wed Nov 16 11:40:51 GMT 2011
 app.grails.version=1.3.7
 app.name=cgimp
 app.servlet.version=2.4
 app.version=0.1
 plugins.hibernate=1.3.7
+plugins.quartz=0.4.2
 plugins.shiro=1.1.3
 plugins.tomcat=1.3.7
