--- a/utils/cgimp/application.properties
+++ b/utils/cgimp/application.properties
@@ -1,10 +1,11 @@
 #Grails Metadata file
-#Tue Jan 03 12:28:24 GMT 2012
+#Wed Jan 18 11:20:46 GMT 2012
 app.grails.version=2.0.0
 app.name=cgimp
 app.servlet.version=2.4
 app.version=0.1
 plugins.hibernate=2.0.0
 plugins.quartz=0.4.2
+plugins.rest=0.7
 plugins.shiro=1.1.3
 plugins.tomcat=2.0.0
