--- a/research/paywall/paywall/application.properties
+++ b/research/paywall/paywall/application.properties
@@ -1,6 +1,8 @@
 #Grails Metadata file
-#Tue Mar 13 12:22:49 GMT 2012
+#Tue Mar 13 12:38:57 GMT 2012
 app.grails.version=2.0.1
 app.name=paywall
 app.servlet.version=2.5
 app.version=0.1
+plugins.amazonfps=0.2.4
+plugins.shiro=1.1.3
